--- a/index.html
+++ b/index.html
@@ -500,19 +500,20 @@
                             <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
                         </div> -->
                         <div class="row">
-                            <div class="card-body left">
-                                <h3>Hello, Admin!
+                            <div class="card-body banner-left">
+                                <h4>Hello, <span>Admin!</span>
                                     <lord-icon
                                         src="https://cdn.lordicon.com/cqofjexf.json"
                                         trigger="loop"
+                                        stroke = "bold"
                                         delay="500"
                                         style="width:45px;height:45px">
                                     </lord-icon>
-                                </h3>
+                                </h4>
                                 <!-- <p class="mb-0">Before working with this theme, you should become familiar with the
                                     Bootstrap framework, especially the utility classes.</p> -->
                             </div>
-                            <div class="card-body right">
+                            <div class="card-body banner-right">
                                 <h3>Picture here</h3>
                                 <!-- <p class="mb-0">Before working with this theme, you should become familiar with the
                                     Bootstrap framework, especially the utility classes.</p> -->
@@ -522,9 +523,6 @@
 
                     <!-- Content Row -->
                     <div class="row">
-
-
-                        
 
                         <!-- CUSTOMERS CARD -->
                         <div class="col-xl-3 col-md-6 mb-4">
