edits plus logo

--- a/html/home.html
+++ b/html/home.html
@@ -20,6 +20,15 @@
     <!-- Custom styles for this template-->
     <link href="../css/sb-admin-2.css" rel="stylesheet">
 
+     <!-- FONT AWESOME ICONS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+
+     <!-- LORDICONS -->
+     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+
+    <!-- CUSTOMIZED JS -->
+    <script src="js/customized.js"></script>
+
     <style>
         body{
             background-image: url(../img/Cars.png);
@@ -54,7 +63,7 @@
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active">HOME</a>
+                            <a href="home.html" class="nav-link active">HOME</a>
                         </li>
 
                         <!-- <div class="topbar-divider d-none d-sm-block"></div> -->
@@ -86,9 +95,14 @@
                 <div class="container-fluid home-content-container">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
-                    <p> CONTENT HERE</p>
-
+                    <h1 class="">Welcome to We-AIMS!</h1>
+                    <p> “Willem's Wheels, Sorted Deals: Aims your Growth as Success Reveals!”</p>
+                    <div class="home-content-button">
+                        <img src="../img/red-car2.png" class="car">
+                        <button class="button-link">
+                            <i class="fa-solid fa-angles-right"></i>
+                        </button>
+                    </div>
                 </div>
                 <!-- /.container-fluid -->
 
@@ -113,7 +127,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
+                        <span aria-hidden="true"></span>
                     </button>
                 </div>
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
