--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <!-- FONT AWESOME ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
-
     <!-- LORDICONS -->
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
 
@@ -42,10 +41,10 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fa-solid fa-boxes-stacked"></i>
+                <div class="sidebar-brand-icon">
+                    <img src="img/logo.png" class="logo">
                 </div>
-                <div class="sidebar-brand-text mx-3">WE-AIMS <sup></sup></div>
+                <!-- <div class="sidebar-brand-text mx-3">WE-AIMS <sup></sup></div> -->
             </a>
 
             <!-- Divider -->
@@ -534,13 +533,13 @@
                                 
                                 <!-- Page Heading -->
                                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                            class="fas fa-download fa-sm text-white-50"></i> VIEW REPORTS</a>
+                                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                                        <i class="fas fa-solid fa-chart-line fa-sm text-white-50"></i> View Reports</a>
                                 </div>
                             </div>
                             <div class="card-body banner-right">
                                <!--  <h3>Picture here</h3> -->
-                                <img id="randomBannerImage" src="img/6367132.jpg" class="img-fluid px-3 px-sm-4 mt-3 mb-4 banner-img" style="width: 15rem;" >
+                                <img id="randomBannerImage" src="" class="img-fluid px-3 px-sm-4 mt-3 mb-4 banner-img" style="width: 20rem;" >
                                 <!-- <p class="mb-0">Before working with this theme, you should become familiar with the
                                     Bootstrap framework, especially the utility classes.</p> -->
                             </div>
