--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Home</title>
+    <title>About</title>
 
     <!-- Custom fonts for this template-->
     <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -30,20 +30,14 @@
     <!-- CUSTOMIZED JS -->
     <script src="js/customized.js"></script>
 
-    <style>
-        body{
-            background-image: url(../img/Cars.png);
-            background-size:cover;
-            background-position:center;
-        }
-    </style>
+
 
 </head>
 
 <body id="page-top">
 
     <!-- Page Wrapper -->
-    <div id="wrapper" class="home-body">
+    <div id="wrapper" class="about-body">
 
         
 
@@ -59,8 +53,8 @@
                         <li class='logo'><a href='#'><img src='../img/logo.png'><span class="top-bar-text">We-AIMS   WILLEM'S AUTOMOTIVE INVANTORY MANAGEMENT SYSTEM</span></a></li>
                         <input type='checkbox' id='check' />
                         <span class="menu">
-                            <li><a href="home.html" class="active">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="about.html" class="active">About</a></li>
                             <li><a href="">Features</a></li>
                             <li><a href="">Contact</a></li>
                             <li><a href="">Login</a></li>
@@ -73,17 +67,17 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid home-content-container">
-
-                    <!-- Page Heading -->
-                    <h1 class="">Welcome to We-AIMS!</h1>
-                    <p> “Willem's Wheels, Sorted Deals: Aims your Growth as Success Reveals!”</p>
-                    <div class="home-content-button">
-                        <img src="../img/red-car2.png" class="car">
-                        <button class="button-link">
-                            <i class="fa-solid fa-angles-right"></i>
-                        </button>
+                <div class="container-fluid about-content-container">
+                    <div class="about-caption">
+                        <!-- Page Heading -->
+                        <h1 class="">Welcome to We-AIMS!</h1>
+                        <p> “Willem's Wheels, Sorted Deals: Aims your Growth as Success Reveals!”</p>
                     </div>
+                    <div class="about-image">
+                        <!-- Page Heading -->
+                        <img src="../img/branch.jpg">
+                    </div>
+                    
                 </div>
                 <!-- /.container-fluid -->
 
