--- a/html/home.html
+++ b/html/home.html
@@ -63,8 +63,8 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="">Features</a></li>
                             <li><a href="">Contact</a></li>
-                            <li><a href="">Login</a></li>
-                            <li><a href="">Sign Up</a></li>
+                            <li><a href="login.html">Login</a></li>
+                            <li><a href="register.html">Sign Up</a></li>
                             <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
                         </span>
                         <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
@@ -76,7 +76,7 @@
                 <div class="container-fluid home-content-container">
 
                     <!-- Page Heading -->
-                    <h1 class="">Welcome to We-AIMS!</h1>
+                    <h1>Welcome to We-AIMS!</h1>
                     <p> “Willem's Wheels, Sorted Deals: Aims your Growth as Success Reveals!”</p>
                     <div class="home-content-button">
                         <img src="../img/red-car2.png" class="car">
