colors and styles

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="html/login.html">Login</a>
-                        <a class="collapse-item" href="html/register.html">Register</a>
+                        <a class="collapse-item" href="pages/login.html">Login</a>
+                        <a class="collapse-item" href="pages/register.html">Register</a>
                         <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
@@ -560,7 +560,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Php 14,500</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-dollar-sign fa-2x text-blue-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -578,7 +578,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Php 9,000</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-dollar-sign fa-2x text-blue-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -596,7 +596,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Php 8,000</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-dollar-sign fa-2x text-blue-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -614,7 +614,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Php 6,500</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-dollar-sign fa-2x text-blue-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -632,7 +632,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">20</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-solid fa-user fa-2x text-gray-300"></i>
+                                            <i class="fas fa-solid fa-user fa-2x text-blue-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -650,7 +650,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">12</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-solid fa-truck-field fa-2x text-gray-300"></i>
+                                            <i class="fas fa-solid fa-truck-field fa-2x text-blue-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -669,7 +669,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-solid fa-box-open fa-2x text-gray-300"></i>
+                                            <i class="fas fa-solid fa-box-open fa-2x text-blue-300"></i>
                                           
                                         </div>
                                     </div>
@@ -688,7 +688,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-solid fa-screwdriver-wrench fa-2x text-gray-300"></i>
+                                            <i class="fas fa-solid fa-screwdriver-wrench fa-2x text-blue-300"></i>
                                             
                                         </div>
                                     </div>
