--- a/pages/about.html
+++ b/pages/about.html
@@ -93,7 +93,7 @@
                     <div class="about-caption">
                         <!-- Page Heading -->
                         <h4>ABOUT US</h4>
-                        <h1 class="">LEGAZPI WILLEM MARKETING CORPORATION</h1>
+                        <h1>LEGAZPI WILLEM MARKETING CORPORATION</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quod fugiat delectus laboriosam, vero reprehenderit rem vitae facilis. Exercitationem labore dolorem vero perspiciatis alias facere doloribus asperiores nesciunt nihil maxime?
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, nulla nesciunt maxime, corporis vel itaque obcaecati dolorum repellendus, quasi ad ipsum laboriosam. Ipsum rerum autem dolore reprehenderit, minus exercitationem sapiente?
                         </p>
