--- a/pages/home.html
+++ b/pages/home.html
@@ -80,9 +80,9 @@
                     <p> “Willem's Wheels, Sorted Deals: Aims your Growth as Success Reveals!”</p>
                     <div class="home-content-button">
                         <img src="../img/red-car2.png" class="car">
-                        <button class="button-link">
+                        <a class="button-link" href="login.html">
                             <i style="font-size: 20px;" class="fa-solid fa-angles-right"></i>
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <!-- /.container-fluid -->
