--- a/pages/login.html
+++ b/pages/login.html
@@ -42,7 +42,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <img src="../img/Red-and-Black-WE-AIMS-Logo.png" class="logo">
+                                        <img src="../img/Red-and-Black-WE-AIMS-Logo.png" class="logo-login">
                                     </div>
                                     <form class="user">
                                         <div class="form-group">
@@ -68,7 +68,7 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="../html/register.html">Create an Account!</a>
+                                        <a class="small" href="register.html">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
