logo directory separation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon">
-                    <img src="img/logo.png" class="logo">
+                    <img src="img/logo/logo.png" class="logo">
                 </div>
                 <!-- <div class="sidebar-brand-text mx-3">WE-AIMS <sup></sup></div> -->
             </a>
