--- a/pages/about.html
+++ b/pages/about.html
@@ -72,7 +72,7 @@
                 <!-- Topbar -->
                 <nav>
                     <ul class='nav-bar'>
-                        <li class='logo'><a href='#'><img src='../img/logo.png'><span class="top-bar-text">We-AIMS - WILLEM'S AUTOMOTIVE INVANTORY MANAGEMENT SYSTEM</span></a></li>
+                        <li class='logo'><a href='#'><img src='../img/logo/logo.png'><span class="top-bar-text">We-AIMS - WILLEM'S AUTOMOTIVE INVANTORY MANAGEMENT SYSTEM</span></a></li>
                         <input type='checkbox' id='check' />
                         <span class="menu">
                             <li><a href="home.html">Home</a></li>
