--- a/pages/home.html
+++ b/pages/home.html
@@ -56,7 +56,7 @@
                 <!-- Topbar -->
                 <nav>
                     <ul class='nav-bar'>
-                        <li class='logo'><a href='#'><img src='../img/logo.png'><span class="top-bar-text">We-AIMS - WILLEM'S AUTOMOTIVE INVANTORY MANAGEMENT SYSTEM</span></a></li>
+                        <li class='logo'><a href='#'><img src='../img/logo/logo.png'><span class="top-bar-text">We-AIMS - WILLEM'S AUTOMOTIVE INVANTORY MANAGEMENT SYSTEM</span></a></li>
                         <input type='checkbox' id='check' />
                         <span class="menu">
                             <li><a href="home.html" class="active">Home</a></li>
