--- a/index.html
+++ b/index.html
@@ -65,21 +65,11 @@
                 MAIN NAVIGATION
             </div>
 
-
-            <!-- Nav Item - CUSTOMERS Menu -->
+            <!-- Nav Item - CUSTOMERS -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseCustomerPurchase"
-                    aria-expanded="true" aria-controls="collapseCustomerPurchase">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-solid fa-users"></i>
-                    <span>Customers</span>
-                </a>
-                <div id="collapseCustomerPurchase" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
+                    <span>Customers</span></a>
             </li>
 
             <!-- Nav Item - SUPPLIERS -->
@@ -96,20 +86,11 @@
                     <span>Employees</span></a>
             </li>
 
-            <!-- Nav Item - PRODUCTS Menu -->
+            <!-- Nav Item - PRODUCTS -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProductsStocks"
-                    aria-expanded="true" aria-controls="collapseProductsStocks">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-solid fa-dolly"></i>
-                    <span>Products</span>
-                </a>
-                <div id="collapseProductsStocks" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
+                    <span>Products</span></a>
             </li>
 
             <!-- Nav Item - SERVICES -->
@@ -119,36 +100,18 @@
                     <span>Services</span></a>
             </li>
 
-            <!-- Nav Item - REPORTS Menu -->
+            <!-- Nav Item - REPORTS -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseReports"
-                    aria-expanded="true" aria-controls="collapseReports">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-solid fa-chart-line"></i>
-                    <span>Reports</span>
-                </a>
-                <div id="collapseReports" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
+                    <span>Reports</span></a>
             </li>
 
-            <!-- Nav Item - SALES Menu -->
+            <!-- Nav Item - SALES -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSales"
-                    aria-expanded="true" aria-controls="collapseSales">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-solid fa-dollar-sign"></i>
-                    <span>Sales</span>
-                </a>
-                <div id="collapseSales" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
+                    <span>Sales</span></a>
             </li>
 
             <!-- Nav Item - TRANSACTIONS Menu -->
@@ -250,27 +213,6 @@
                     <span>Tables</span></a>
             </li>
 
-            <!-- CATEGORY -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Category</span></a>
-            </li>
-
-            <!-- CATEGORY -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Category</span></a>
-            </li>
-
-            <!-- CATEGORY -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Category</span></a>
-            </li>
-
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -320,10 +262,10 @@
 
                     <!-- Topbar Navbar -->
                     <div class="date-and-time">
-                        <span id="date_now" class="">
+                        <span id="date_now" class="date-now">
                             <!-- JavaScript will update this -->
                         </span>
-                        <span id="current-time" class="">
+                        <span id="current-time" class="time-now">
                             <!-- JavaScript will update this -->
                         </span>
                     </div>
